knoq/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knoq-backend
  labels:
    app.kubernetes.io/name: knoq-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: knoq-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: knoq-backend
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - las211.tokyotech.org
              weight: 1

      containers:
        - name: knoq-backend
          image: ghcr.io/traptitech/knoq:2.5.16
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: "50m"
              memory: "96Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
