knoq/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knoq-backend
spec:
  selector:
    app.kubernetes.io/name: knoq-backend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  type: ClusterIP
