knoq/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knoq-frontend
spec:
  selector:
    app.kubernetes.io/name: knoq-frontend
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  type: ClusterIP
