knoq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knoq-service

spec:
  type: ClusterIP
  selector:
    app: knoq
  ports:
    - name: http
      port: 3000
      targetPort: 3000
